@@ -1,14 +1,14 @@
 package ru.yandex.practicum.filmorate.service;
 
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
-import org.springframework.web.server.ResponseStatusException;
+import ru.yandex.practicum.filmorate.exception.NotFoundException;
+import ru.yandex.practicum.filmorate.exception.ValidationException;
 import ru.yandex.practicum.filmorate.model.User;
 import ru.yandex.practicum.filmorate.storage.user.UserStorage;
 
-import java.util.*;
-import java.util.stream.Collectors;
+import java.time.LocalDate;
+import java.util.List;
 
 @Service
 public class UserService {
@@ -19,73 +19,68 @@ public class UserService {
         this.userStorage = userStorage;
     }
 
-    public void createUser(User user) {
-        userStorage.create(user);
+    public User createUser(User user) {
+        validateUser(user);
+        return userStorage.create(user);
     }
 
     public User getById(long id) {
-        return userStorage.getById(id);
+        User user = userStorage.getById(id);
+        if (user == null) {
+            throw new NotFoundException("User with id " + id + " not found");
+        }
+        return user;
     }
 
     public List<User> getAll() {
         return userStorage.getAll();
     }
 
-    public void updateUser(User user) {
-        userStorage.update(user);
+    public User updateUser(User user) {
+        if (userStorage.getById(user.getId()) == null) {
+            throw new NotFoundException("User with id " + user.getId() + " not found");
+        }
+        validateUser(user);
+        return userStorage.update(user);
     }
 
-    public User addFriend(long userId, long friendId) {
-        User user = userStorage.getById(userId);
-        User userFriend = userStorage.getById(friendId);
-
-        if (user == null || userFriend == null) {
-            throw new IllegalArgumentException("User not found");
+    public void addFriend(long userId, long friendId) {
+        if (userStorage.getById(userId) == null || userStorage.getById(friendId) == null) {
+            throw new NotFoundException("User or Friend not found");
         }
-
-        userFriend.addFriend(userId);
-        user.addFriend(friendId);
-        return user;
+        userStorage.addFriend(userId, friendId);
     }
 
-    public User removeFriend(long userId, long friendId) {
-        User user = userStorage.getById(userId);
-        User userFriend = userStorage.getById(friendId);
-
-        if (user == null || userFriend == null) {
-            return null;
+    public void removeFriend(long userId, long friendId) {
+        if (userStorage.getById(userId) == null || userStorage.getById(friendId) == null) {
+            throw new NotFoundException("User or Friend not found");
         }
-
-        userFriend.removeFriend(userId);
-        user.removeFriend(friendId);
-        return user;
+        userStorage.removeFriend(userId, friendId);
     }
 
-    public List<Map<String, Long>> getFriends(long userId) {
-        User user = userStorage.getById(userId);
-
-        if (user == null) {
-            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "User not found");
+    public List<User> getUserFriends(long userId) {
+        if (userStorage.getById(userId) == null) {
+            throw new NotFoundException("User with id " + userStorage.getById(userId) + " not found");
         }
-
-        return user.getFriends() != null
-                ? user.getFriends().stream()
-                .map(friendId -> Map.of("id", friendId))
-                .collect(Collectors.toList())
-                : Collections.emptyList();
+        return List.copyOf(userStorage.getUserFriends(userId));
     }
 
-    public Set<Long> getCommonFriends(long userId, long otherId) {
-        User user = userStorage.getById(userId);
-        User otherUser = userStorage.getById(otherId);
+    public List<User> getCommonFriends(long userId, long otherId) {
+        return List.copyOf(userStorage.getCommonFriends(userId, otherId));
+    }
 
-        if (user == null || otherUser == null) {
-            return Collections.emptySet();
+    private void validateUser(User user) {
+        if (user.getLogin() == null || user.getLogin().isEmpty() || user.getLogin().contains(" ")) {
+            throw new ValidationException("Login can't be empty and contain spaces");
         }
-
-        Set<Long> common = new HashSet<>(user.getFriends());
-        common.retainAll(otherUser.getFriends());
-
-        return common;
+        if (user.getEmail() == null || user.getEmail().isEmpty() || !user.getEmail().contains("@")) {
+            throw new ValidationException("Email can't be empty and must contain @");
+        }
+        if (user.getBirthday() == null || user.getBirthday().isAfter(LocalDate.now())) {
+            throw new ValidationException("Birthday can't be in the future");
+        }
+        if (user.getName() == null || user.getName().isEmpty()) {
+            user.setName(user.getLogin());
+        }
     }
 }
